flicker problem fix

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -15,7 +15,7 @@
     opacity: 0.75;
     -webkit-transition: opacity 0.2s ease-in-out;
     transition: opacity 0.2s ease-in-out;
-
+	transform: translate3d(0, 0 , 0);
     &:hover {
       opacity: 1;
     }
